refactor(permission): replace confirmation tokens with direct proposal decisions